syntax = "proto3";

package traffic;

// The service definition
service TrafficManagement {
    rpc incidentReport(stream IncidentInput) returns (stream IncidentInput);
}


// Client-2: Bi-directional Chat Streaming App to report/discuss emergency incidents in the city

// Message to send traffic density data
message IncidentInput{
string trafficOfficerID = 1; // ID of traffic officer
string message = 2; // Comments on the incident
}


